tests/ui/suggestions/mut-borrow-needed-by-trait.stderr
error[E0277]: the trait bound `&dyn std::io::Write: std::io::Write` is not satisfied
  --> $DIR/mut-borrow-needed-by-trait.rs:17:29
   |
LL |     let fp = BufWriter::new(fp);
   |              -------------- ^^ the trait `std::io::Write` is not implemented for `&dyn std::io::Write`
   |              |
   |              required by a bound introduced by this call
   |
   = note: `std::io::Write` is implemented for `&mut dyn std::io::Write`, but not for `&dyn std::io::Write`
note: required by a bound in `BufWriter::<W>::new`
  --> $SRC_DIR/std/src/io/buffered/bufwriter.rs:LL:COL

error[E0277]: the trait bound `&dyn std::io::Write: std::io::Write` is not satisfied
  --> $DIR/mut-borrow-needed-by-trait.rs:17:14
   |
LL |     let fp = BufWriter::new(fp);
   |              ^^^^^^^^^^^^^^^^^^ the trait `std::io::Write` is not implemented for `&dyn std::io::Write`
   |
   = note: `std::io::Write` is implemented for `&mut dyn std::io::Write`, but not for `&dyn std::io::Write`
note: required by a bound in `BufWriter`
  --> $SRC_DIR/std/src/io/buffered/bufwriter.rs:LL:COL

error[E0599]: cannot write into `BufWriter<&dyn std::io::Write>`
  --> $DIR/mut-borrow-needed-by-trait.rs:21:5
   |
LL |     writeln!(fp, "hello world").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type does not implement the `write_fmt` method
   = help: try adding `use std::fmt::Write;` or `use std::io::Write;` to bring the appropriate trait into scope
   = note: this error originates in the macro `writeln` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
